Fix search in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,10 @@
   color: #333;
 }
 
+.modal input[type=text] {
+  color: #333;
+}
+
 .modal-content {
   background: #fff;
   color: #333;
